# ogma

./: Cargo.toml  LICENSE.md  README.md
clause/: Cargo.toml
clause/macro/: Cargo.toml
clause/macro/src/: lib.rs
clause/parser/src/: lib.rs
clause/src/: lib.rs
clause/tests/: macro.rs
clause_macro/: Cargo.toml
clause_macro/src/: lib.rs
clause_parser/: Cargo.toml
fn_macro/: Cargo.toml
fn_macro/src/: lib.rs
libs/: Cargo.toml
libs/src/: bdd.rs  clause.rs  lib.rs  matcher.rs  module.rs
libs/src/vm/: context.rs  func.rs  mod.rs  script.rs  trap.rs
macros/: Cargo.toml
macros/src/: clause_macro.rs  fn_macro.rs  lib.rs
matcher/: Cargo.toml
matcher/src/: lib.rs
module/: Cargo.toml
module/src/: lib.rs
ogma/: Cargo.toml
ogma/src/: lib.rs
ogma/tests/: bdd_macro.rs  bdd_matcher.rs  clause_macro.rs  fn_macro.rs  matcher.rs
test/: Cargo.toml
test/src/: main.rs
testing/: Cargo.toml
testing/src/: bdd_macro.rs  bdd_matcher.rs  clause_macro.rs  error.rs  fn_macro.rs  lib.rs  matcher.rs  no_std_tests.rs
vm/: Cargo.toml
vm/src/: context.rs  func.rs  lib.rs  script.rs
