[package]
name = "ogma-libs"
version = "0.1.5"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Ogma DSL builder libs"

[features]
default = []

[dependencies]
serde = "1.0"
nl-parser = { version = "0.1" }
nlsd = { version = "0.1" }
nloq = { version = "0.1" }
object-query = { version = "0.1" }
hashbrown = "0.9.0"
