[package]
name = "ogma-libs"
version = "0.1.6"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Ogma DSL builder libs"

[features]
default = ["std"]
std = ["serde/std", "nl-parser/std", "nlsd/std", "nloq/std", "object-query/std"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc"] }
nl-parser = { version = "0.1", default-features = false }
nlsd = { version = "0.1", default-features = false }
nloq = { version = "0.1", default-features = false }
object-query = { version = "0.1", default-features = false }
