[package]
name = "ogma-macros"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[features]
default = []

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
ogma-libs = { path = "../libs" }
