[package]
name = "ogma-macros"
version = "0.1.5"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Ogma DSL builder libs"

[lib]
proc-macro = true

[features]
default = []

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
ogma-libs = { version = "0.1.5", path = "../libs" }
