[package]
name = "ogma"
version = "0.1.1"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/riddleandcode/ogma"
documentation = "https://docs.rs/ogma/"
repository = "https://github.com/riddleandcode/ogma"
description = "Ogma DSL builder"
keywords = ["natural-language", "parsing", "vm", "DSL"]
categories = ["parsing"]

[features]
default = []

[dependencies]
ogma-libs = { version = "0.1", path = "../libs" }
ogma-macros = { version = "0.1", path = "../macros" }
object-query = { version = "0.1" }
