[package]
name = "ogma"
version = "0.1.5"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/riddleandcode/ogma"
documentation = "https://docs.rs/ogma/"
repository = "https://github.com/riddleandcode/ogma"
description = "Ogma DSL builder"
keywords = ["natural-language", "parsing", "vm", "DSL"]
categories = ["parsing"]

[features]
default = ["std"]
std = ["ogma-libs/std", "ogma-macros/std", "object-query/std"]

[dependencies]
ogma-libs = { version = "0.1.5", path = "../libs", default-features = false }
ogma-macros = { version = "0.1.5", path = "../macros", default-features = false }
object-query = { version = "0.1", default-features = false }
